projeto3-driveneats/style.css
@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:wght@100;300;400;500;700&display=swap');

* {
    box-sizing: border-box;
}

.header {
    height: 92px;
    background-color: #CF2B2B;
    padding: 8px 21px;
    position: fixed;
    width: 100%;
    left: 0;
    top: 0;
}

.header h1 {
    
    font-family: 'Righteous';
    margin-top: 0px;
    font-style: normal;
    font-size: 44px;
    line-height: 55px;
    letter-spacing: -0.012em;
    color: white;
    margin-bottom: 5px;


}

button {
    
    background-color: #CBCBCB;
    border-radius: 50px;
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 23px;
    text-align: center;
    letter-spacing: 0.018em;
    height: 61px;
    width: 91%;
    border: solid 0px red;

    color: #FFFFFF;
}

.footer {
    background-color: white;
    height: 92px;
    justify-content: center;
    align-items: center;
    width:100%;
    left:0;
    position: fixed;
    bottom:0;
}

.header h2 {
    margin-top: -12px;
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    line-height: 21px;
    color: white;
}

.order-bottom {
    justify-content: space-between;
}

.order-bottom img {
    display: none;
}

h1 {
    
    font-family: 'Righteous';
    font-style: normal;
    font-size: 26px;
    line-height: 32px;
    letter-spacing: 0.018em;


    color: #333333;

}

.page {
    margin-top:92px;
    background-color: #F5F6F7;
    padding: 19px;
    padding-top: 27px;
    margin-bottom: 65px;
}


.item {
    border-spacing: 0;
    background-color: #FFFFFF;
    border-radius: 9px;
    padding: 18px 14px 13px;
    width: 172px;
    margin-right: 16px;
}

.secao {
    overflow-x: scroll;
    margin-bottom: 27px;
    margin-top: 17px;
}

.item h3 {
    
    
    font-family: 'Roboto';
    margin-bottom: 9px;
    font-style: normal;
    font-weight: 300;
    font-size: 15px;
    line-height: 18px;
    /* identical to box height */


    color: #A6A6A6;
}

.item h1 {
    
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 700;
    font-size: 16px;
    line-height: 19px;
    margin-bottom: 4px;

    color: #333333;
}

.container {
    display: flex;
}

.item h2 {
    
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 19px;
    
    
    color: #000000;

}

